--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
     </div>
     
     <script>
-        const WEBHOOK_URL = 'https://n8n-test-2025.duckdns.org/webhook/onbboarding';
+        const WEBHOOK_URL = 'https://n8n-test-2025.duckdns.org/webhook-test/onbboarding';
         
         document.getElementById('documentoID').addEventListener('change', function(e) {
             const fileName = e.target.files[0]?.name || '';
